tests/lang/oberon/types/fail/invalid-type.obr
MODULE InvalidType;
    TYPE Invalid = NOT_A_TYPE;
END InvalidType.
